--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,6 +13,10 @@
 
 .lightMode {
     background-image: url("./bgLight.svg");
+        width: 100%;
+    display: flex;
+    justify-content: center;
+
 }
 
 .main {
