--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,13 +6,13 @@
 
 .container {
     width: 100%;
-    background-image: url("public/bg.svg");
+    background-image: url("/bg.svg"); 
     display: flex;
     justify-content: center;
 }
 
 .lightMode {
-    background-image: url("public/bgLight.svg");
+    background-image: url("/bgLight.svg");
         width: 100%;
     display: flex;
     justify-content: center;
